# Spy4Cast

./: .gitignore  .readthedocs.yaml  README.md  anaconda-project.yml  environment.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/: requirements.txt  requirements_dev.txt
docs/source/: conf.py  crossvalidation.rst  example.rst  index.rst  installation.rst  methodologies.rst  plotting.rst  spy4cast.functions.rst  spy4cast.meteo.rst  tutorial.rst  usage.rst
examples/: anom-2006-chl.py  anom-example.py  anomer_example.py  clim-example.py  example01.py  example_mca_crossvalidation_slp_pre_europa.py  example_of_crossvalidation.py  example_of_crossvalidation_with_custom_plotting.py  example_of_minimalistic_running_crossvalidation_and_mca.py  example_of_ploting_anomaly_maps_and_time_series.py  example_of_running_validation_methodology.py  example_of_validation_on_multiple_training_periods_against_same_period.py  how_to_use_custom_preprocessing_steps.py  plot-spy4cast-example.py  prueba-validation-03042023.py  run-spy4cast-example.py  spy4cast-example.py  spy4cast-prueba-03122022.py  spy4cast_chlorMED_pac.py  spy4cast_chlorMED_tna.py  spy4cast_example.py  spy4cast_example_2.py
examples/Spy4CastManual/: Climatology_Anomaly_EquatorialAtlantic.ipynb  Climatology_Anomaly_EquatorialAtlantic.py  EquatorialAtlantic_Impact_Nino.ipynb  EquatorialAtlantic_Impact_Nino.py  Pacific_Impact_Sahelian_Rainfall.ipynb  Pacific_Impact_Sahelian_Rainfall.py  README.md  Tutorial.ipynb
examples/data-anom/: map_anomalylat.npy  ts_anomalydata.npy
examples/old/: anom-2006-chl.py  anomer_example.py  spy4cast_chlorMED_pac.py  spy4cast_chlorMED_tna.py  spy4cast_example.py
modules/: custom_types.py  functions.py  meteo.py  read_data.py  readers.py
spy4cast/: __init__.py  _functions.py  errors.py  functions.py  meteo.py  plotters.py  read_data.py  readers.py  spy4caster.py  stypes.py
src/spy4cast/: __init__.py  _functions.py  _log.py  _procedure.py  dataset.py  errors.py  land_array.py  log.py  meteo.py  plotters.py  read_data.py  spy4caster.py  stypes.py
src/tests/: __init__.py  __init___test.py  _functions_test.py  _procedure_test.py  dataset_test.py  errors_test.py  stypes_test.py
tests/: anom-example.py  clim-example.py  dataset-test.py  preprocess-test.py  spy4cast-example.py  spy4cast-test.py  time-variable-test.py
(+154 files in other folders)
