[project]
name = "spy4cast"
version = "1.1.0"
authors = [
    {name="Pablo Duran", email="pdrm56@gmail.com"}
]
description = "Python API to process .nc datasets and perform scientific methodologies"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.22.4",
    "matplotlib==3.5",
    "xarray==2022.3.0",
    "dask",
    "pandas",
    "netcdf4",
    "scipy==1.7.3",
]

[project.urls]
Source = "https://github.com/pabloduran016/spy4cast"
Documentation = "https://spy4cast-docs.netlify.app"

[options]
package_dir = "src"

[build-system]
requires = [
    "setuptools>=42"
]
build-backend = "setuptools.build_meta"
