[metadata]
name = spy4cast
version = 1.0.3
author = Pablo Duran
author_email = pdrm56@gmail.com
description = Python API to process .nc datasets and perform scientific methodologies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pabloduran016/Spy4Cast
project_urls =
    Documentation = https://spy4cast-docs.netlify.app
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src